# generative-group-instance

./: .gitignore  README.md  pyproject.toml  requirements.txt  toy_data.py  vae.py
ICML-2022-paper/: .gitignore  README.html  README.md  example_paper.bib  main.bib  main.dvi  main.tex
ICML-2022-paper/files/: bayes_net.drawio
collab-filtering/: test.ipynb
collab-filtering/src/: model.py  networks.py  train.py
collab-filtering/utils/: plots.py
exam-scores/: README.md  main.py  ml_vae.py  notes.md  pyproject.toml  results.py  toy_data.py
exam-scores/exp/: batch_size.py  model_name.py
exam-scores/src/: experiments.py  latent_pred.py  loss_funcs.py  ml_vae.py  model.py  networks.py  train.py  v_vs_n.py  v_vs_n_gp.py
exam-scores/utils/: helpers.py  plots.py  results.py  toy_data.py
exam_scores/: pyproject.toml
exam_scores/src/: ml_vae.py  networks.py
exam_scores/utils/: plots.py
river-flow/: .gitignore  README.md  pyproject.toml
river-flow/data/: .gitignore  riverflow_preprocess.ipynb  riverflow_preprocess.py
river-flow/model/: dot_prod_attention.py  experimental2d_model.py
river-flow/notebooks/: UNN_riverflow_2.ipynb
river-flow/src/: data_load.py  plot.py
style-content/src/: model.py  networks.py  train.py
style-content/utils/: helpers.py
