[tool.poetry]
name = "generative-group-instance"
version = "0.1.0"
description = ""
authors = ["Dan-Andrei-Iliescu <iliescudanandrei@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
notebook = "^6.4.3"
numpy = "^1.21.2"
pandas = "^1.3.2"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
